--- a/.gitignore
+++ b/.gitignore
@@ -134,7 +134,7 @@ snowboy-detect-swig.o
 personal_models/*
 
 # custom configs and credentials
-custom/
+assistant/custom/
 
 
 # other user specific
