--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ selenium==3.141.0
 six==1.11.0
 spotipy==2.4.4
 tabulate==0.8.3
-wikipedia==1.4.0
-PyYAML==5.1
+pyyaml
 grpcio==1.17.1
 tekore==1.7.0
+pyusb==1.0.0b2
