--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 beautifulsoup4==4.7.0
 boto3==1.9.71
 Flask==1.1.1
+grpcio
 google-api-core==1.7.0
 google-auth==1.6.2
 google-cloud-speech==0.36.0
@@ -17,6 +18,5 @@ six==1.11.0
 spotipy==2.4.4
 tabulate==0.8.3
 pyyaml
-grpcio==1.17.1
 tekore==1.7.0
 pyusb==1.0.0b2
